<resources>

    <string name="app_name">Worldcup2014</string>
    <string name="match_schedule">Lịch thi đấu</string>    
    <string name="news">Tin tức</string>
    <string name="all_group">Các bảng đấu</string>
    <string name="round">Vòng loại trực tiếp</string>
    <string name="facebook">Like</string>
    <string name="exit">Thoát</string>
    
    <string name="hello">Hello</string>
    

</resources>
